--- a/src/index.css
+++ b/src/index.css
@@ -1,57 +1,63 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @font-face {
-  font-family: "Vazir";
-  src: url("assets/fonts/Vazir-Regular.woff") format("woff");
+  font-family: 'Vazir';
+  src: url('assets/fonts/Vazir-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Vazir";
-  src: url("assets/fonts/Vazir-Regular.woff2") format("woff2");
+  font-family: 'Vazir';
+  src: url('assets/fonts/Vazir-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Vazir";
-  src: url("assets/fonts/Vazir-Medium.woff") format("woff");
+  font-family: 'Vazir';
+  src: url('assets/fonts/Vazir-Medium.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Vazir";
-  src: url("assets/fonts/Vazir-Medium.woff2") format("woff2");
+  font-family: 'Vazir';
+  src: url('assets/fonts/Vazir-Medium.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Vazir";
-  src: url("assets/fonts/Vazir-Bold.woff") format("woff");
+  font-family: 'Vazir';
+  src: url('assets/fonts/Vazir-Bold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "Vazir";
-  src: url("assets/fonts/Vazir-Bold.woff2") format("woff2");
+  font-family: 'Vazir';
+  src: url('assets/fonts/Vazir-Bold.woff2') format('woff2');
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 
 @theme {
-  --font-vazir: "Vazir";
+  --font-vazir: 'Vazir';
 }
 
 body {
   @apply font-vazir;
+}
+
+*,
+::before,
+::after {
+  outline: none;
 }
